added devmem kernel support

--- a/.config
+++ b/.config
@@ -172,6 +172,7 @@ CONFIG_EMMC_SUPPORT=y
 CONFIG_NAND_SUPPORT=y
 CONFIG_arm=y
 CONFIG_arm_v7=y
+CONFIG_DEVMEM=y
 CONFIG_ARCH="arm"
 
 #
@@ -381,8 +382,7 @@ CONFIG_KERNEL_IPV6_SEG6_LWTUNNEL=y
 # CONFIG_KERNEL_JFS_POSIX_ACL is not set
 # end of Filesystem ACL and attr support options
 
-# CONFIG_KERNEL_DEVMEM is not set
-CONFIG_DEVMEM=y
+CONFIG_KERNEL_DEVMEM=y
 # CONFIG_KERNEL_DEVKMEM is not set
 CONFIG_KERNEL_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 # CONFIG_KERNEL_SQUASHFS_XATTR is not set
